--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -93,11 +93,7 @@
     <span class="oi oi-globe" aria-hidden="true"></span>
     <div>
         <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques - 91462472100017</a><br>
+        <a>Ce site s'execute dans votre navigateur via la technologie WebAssembly, le code source est consultable (onglet Projets)'</a>
         <a>Ce site est hébergée par la société OVH dont l'adresse est 2 rue Kellermann - 59100 Roubaix - France</a>
     </div>
 </div>
-
-
-
-
-
