--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -60,7 +60,7 @@ else
 
         </tbody>
     </table>
-    <p>Soit un poids total de @TotalPoids jours</p>
+    <a>Soit un poids total de @TotalPoids jours</a>
     </div>
 
 
