--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/Aif4thah">
-                <img src="Github.png" class="imgNav" alt="--">  R&D
+                <img src="Github.png" class="imgNav" alt="--">  Projets
             </NavLink>
         </div>
 
