--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -98,6 +98,11 @@ else
     }
 
 }
+<h3>Licence</h3>
+<span class="oi oi-badge" aria-hidden="true"></span>
+    <div class="bgDiv">
+        <a>GPL-3.0 license</a>
+    </div>
 
 @code {
     private SEtape[]? GetEtapes;
