--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -92,8 +92,8 @@
     <h3>à propos du site</h3>
     <span class="oi oi-globe" aria-hidden="true"></span>
     <div>
-        <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques - 91462472100017</a><br>
-        <a>Ce site s'execute dans votre navigateur via la technologie WebAssembly, le code source est consultable (onglet Projets)'</a>
+        <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques - 91462472100017</a><br />
+        <a>Le code s'exécute dans votre navigateur grâce à la technologie WebAssembly, le code source est consultable via onglet "Projets"</a><br />
         <a>Ce site est hébergée par la société OVH dont l'adresse est 2 rue Kellermann - 59100 Roubaix - France</a>
     </div>
 </div>
