--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,19 +2,19 @@
 
 <PageTitle>Taisen</PageTitle>
 
-<link rel="icon" type="image/x-icon" href="~/Favicon.ico" />
+<link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
 <h1> TAISEN Solutions </h1>
 <p class="sh1"> La sécurité en cohérence avec vos projets </p>
 
 <div class= "bgBan">
-    <img src="Logov2.png" class="imgBan" alt="--">
+    <img src="Images/Logov2.png" class="imgBan" alt="--">
 </div>
 
 
 <div class="bgDiv">
     <br>
     <h2>Une approche pragmatique et intelligente pour sécuriser vos applications</h2>
-    <img src="Ok.png" class="imgLogo" alt="--">
+    <img src="Images/Ok.png" class="imgLogo" alt="--">
     <p>
         Taisen a pour objectif de sécuriser vos projets de manière adaptée et cohérente.
         Face aux difficultés rencontrées pour la sécurisation des projets applicatifs, 
@@ -28,7 +28,7 @@
 <div>
     <br>
     <h2> Une méthode différente, en phase avec les bonnes pratiques </h2>
-    <img src="Ok.png"class="imgLogo" alt="--">
+    <img src="Images/Ok.png"class="imgLogo" alt="--">
     <p> 
         L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
         Taisen souhaite apporter aux projets des solutions bas niveau leur permettant de maitriser leur niveau de sécurité. 
@@ -50,7 +50,7 @@
 <div class="bgDiv">
     <br>
     <h2> Une recherche d'amélioration constante </h2>
-    <img src="Ok.png"class="imgLogo" alt="--">
+    <img src="Images/Ok.png"class="imgLogo" alt="--">
     <p>
         Grâce à un temps dédié au retour d'expérience, à la prise de recul et au développement d'outillage et de processus efficients,
         Taisen à l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
@@ -68,7 +68,7 @@
     <br>
     <h2>Contact</h2>
 
-    <img src="Portrait.png" class="imgSmall" alt="--">
+    <img src="Images/Portrait.png" class="imgSmall" alt="--">
 
 
     <p class="sh1"> Pour une première prise de contact, exprimer un besoin ou simplement échanger</p>
@@ -93,7 +93,7 @@
     <span class="oi oi-globe" aria-hidden="true"></span>
     <div>
         <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques - 91462472100017</a><br />
-        <a>Le code s'exécute dans votre navigateur grâce à la technologie WebAssembly, le code source est consultable via onglet "Projets"</a><br />
+        <a>Le code s'exécute dans votre navigateur grâce à la technologie WebAssembly, les sources sont consultables via l'onglet "Projets".</a><br />
         <a>Ce site est hébergée par la société OVH dont l'adresse est 2 rue Kellermann - 59100 Roubaix - France</a>
     </div>
 </div>
