--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href=""> <img src=LogoTaisenSite.png class="imgLogo"> TAISEN  </a>
+        <a class="navbar-brand" href=""> <img src="Images/LogoTaisenSite.png" class="imgLogo"> TAISEN  </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,13 +24,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://github.com/Aif4thah">
-                <img src="Github.png" class="imgNav" alt="--">  Projets
+                <img src="Images/Github.png" class="imgNav" alt="--">  Projets
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="https://www.linkedin.com/in/mvacarella">
-                 <img src="in.png" class="imgNav" alt="--">  CV
+                 <img src="Images/in.png" class="imgNav" alt="--">  CV
             </NavLink>
         </div>
 
