--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -34,11 +34,11 @@ ul, li {
 .sh1 {
     text-align: center !important;
     font-size: x-large;
-    color: #671c85
+    color: #851c1c
 }
 
 .btn-link {
-    color: #0071c1;
+    color: #830000;
 }
 
 .btn-primary {
@@ -111,7 +111,7 @@ table{
 h2 {
     margin-top: 30px;
     margin-bottom: 10px;
-    color: rgb(104, 37, 143);
+    color: rgb(143, 37, 37);
     text-align: center !important;
     font-size: 32px !important;
 }
@@ -119,7 +119,7 @@ h2 {
 h3 {
     margin-top: 20px;
     margin-bottom: 7px;
-    color: rgb(119, 61, 153);
+    color: rgb(153, 61, 61);
     text-align: center !important;
     font-size: 22px !important;
 }
@@ -134,7 +134,7 @@ h4 {
 }
 
 .button {
-    background-color: rgb(103, 22, 134);
+    background-color: rgb(134, 22, 22);
     border: none;
     color: white;
     padding: 10px;
@@ -176,7 +176,7 @@ img {
 }
 
 .bgDiv{
-    background-color: rgb(253, 249, 255);
+    background-color: rgb(248, 248, 248);
 }
 
 .img {
