--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -24,11 +24,11 @@
 
 <h2>Périmètre</h2>
 <span class="oi oi-crop" aria-hidden="true"></span>
-<p>Le champ de cette méthodologie cible les projets applicatifs, et en particulier:</p>
+<p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils reposent, ce qui inclut:</p>
 <ul>
-    <li>les applications métiers, qu'il s'agisse d'application Web, industrielle ou IoT… </li>
+    <li>toute application métier, qu'il s'agisse d'un environnement  Web, industriel, IoT, cloud, hybride, etc.</li>
     <li>le middleware, les librairies, les dépendances et les composants tiers</li>
-    <li>les composants du système d’exploitation des microservices, ainsi que leur orchestration</li>
+    <li>les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
 </ul>
 
 
