--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -27,7 +27,7 @@
 
 <div>
     <br>
-    <h2> Une méthode différente, en phase avec les bonnes pratiques </h2>
+    <h2>Une méthode différente, en phase avec les bonnes pratiques </h2>
     <img src="Images/Ok.png"class="imgLogo" alt="--">
     <p> 
         L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
@@ -36,11 +36,28 @@
         <br>
         La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets applicatifs.
         Les succès, mais aussi les échecs sont pris en compte, afin d'améliorer cette méthode de manière continue. 
-        Les bonnes pratiques de l'<a href = "https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href = "https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode. 
+        Les bonnes pratiques de l'<a href = "https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href = "https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode.
     </p>
     <form>
         <a href="/simple-demo">
-            <input type="button" class="button" value="Découvrir la methodologie">
+            <input type="button" class="button" value="Découvrir la méthode d'Accompagnement">
+        </a>
+    </form>
+    <br>
+</div>
+
+<div>
+    <br>
+    <h2>Un panel d'Audit de sécurité adapté à vos besoin </h2>
+    <img src="Images/Ok.png"class="imgLogo" alt="--">
+    <p> 
+        Afin d'évaluer le niveau de sécurité de votre système d'information, Taisen propose plusieurs types d'audits de sécurité.
+        Un effort tout particulier est porté sur les recommandations liées aux vulnérabilités découvertes. 
+        Ces "Quick-Wins" vous permettront de consolider rapidement la sécurité de vos actifs.        
+    </p>
+    <form>
+        <a href="/audits-ssi">
+            <input type="button" class="button" value="Voir les Audits de sécurité">
         </a>
     </form>
     <br>
