--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -18,7 +18,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="/simple-demo">
-                <span class="oi oi-task" aria-hidden="true"></span> Méthode
+                <span class="oi oi-task" aria-hidden="true"></span> Accompagnement
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/audits-ssi">
+                <span class="oi oi-pulse" aria-hidden="true"></span> Audits
             </NavLink>
         </div>
 
