--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -48,7 +48,7 @@
 
 <div>
     <br>
-    <h2>Un panel d'audits de sécurité adaptés à vos besoins</h2>
+    <h2>Un panel d'audits de sécurité adapté à vos besoins</h2>
     <img src="Images/Ok.png"class="imgLogo" alt="--">
     <p> 
         Afin d'évaluer le niveau de sécurité de votre système d'information, Taisen propose plusieurs types d'audits de sécurité.
