--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -62,7 +62,6 @@ else
         </table>
     </div>
     <a>Soit un poids total de @TotalPoids jours</a>
-    
 
     @foreach( SEtape E in GetEtapes)
     {
@@ -79,15 +78,23 @@ else
                 @if(@A.Prerequis != null){<a>Prérequis : @A.Prerequis</a> <br/>}
                 <a>Poids : @A.Poids</a>
 
-                <h4>Processus</h4>
-                <ul>
-                @foreach(string p in A.Processus){ <li>@p</li> }
-                </ul>
+                <fieldset>
+                    <legend>Processus:</legend>
+                    @foreach(string p in A.Processus){
+                        <input class="CheckBox" type="checkbox" name=@p value=@p /><br/>
+                        <label for=@p>@p</label><br/>
+                }
+                </fieldset>
 
-                <h4>Livrables</h4>
-                <ul>
-                @foreach (string l in A.Livrables){<li>@l</li> }
-                </ul>
+                <fieldset>
+                    <legend>Livrables:</legend>
+                @foreach (string l in A.Livrables){
+                    <p>@l</p>
+                    <form>
+                        <textarea>...</textarea>
+                    </form>
+                }
+                </fieldset>
             </div>
         }
     }
@@ -100,22 +107,14 @@ else
     </div>
 
 @code {
+
     private SEtape[]? GetEtapes;
     private int TotalPoids = 0;
-
-    protected override async Task OnInitializedAsync()
-    {
-
-        GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
-        @foreach(SEtape E in GetEtapes)
-            @foreach(Atelier A in E.Ateliers)
-                TotalPoids += A.Poids;
-
-    }
+    private bool Hide = true;
 
     public class SEtape
     {
-        public string Etape { get; set; }
+        public string Etape { get; set;}
         public string Objectif { get; set; }
         public  IEnumerable<Atelier> Ateliers { get; set; }
     }
@@ -128,4 +127,15 @@ else
         public  IEnumerable<string> Processus { get; set; }
         public  IEnumerable<string> Livrables { get; set; }
     }
+
+    protected override async Task OnInitializedAsync()
+    {
+
+        GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
+        @foreach(SEtape E in GetEtapes)
+            @foreach(Atelier A in E.Ateliers)
+                TotalPoids += A.Poids;
+
+    }
+
 }
