--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(0, 0, 0) 0%, #470606 70%);
+    background-color: #2e2424;
 }
 
 .top-row {
