--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,6 +1,11 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href=""> <img src="Images/LogoTaisenSite.png" class="imgLogo"> TAISEN  </a>
+        
+        <a class="navbar-brand" href="">
+            <img src="Images/Logov2.png" class="imgLogo">
+            TAISEN
+            
+            </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
