--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,8 +3,8 @@
 <PageTitle>Taisen</PageTitle>
 
 <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
-<h1> TAISEN Solutions </h1>
-<p class="sh1"> La sécurité en cohérence avec vos projets </p>
+<h1>TAISEN Solutions</h1>
+<p class="sh1"> La sécurité en cohérence avec vos projets</p>
 
 <div class= "bgBan">
     <img src="Images/Logov2.png" class="imgBan" alt="--">
@@ -36,10 +36,10 @@
         <br>
         La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets applicatifs.
         Les succès, mais aussi les échecs sont pris en compte, afin d'améliorer cette méthode de manière continue. 
-        Les bonnes pratiques de l'<a href = "https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href = "https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode.
+        Les bonnes pratiques de l'<a href="https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href="https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode.
     </p>
     <form>
-        <a href="/simple-demo">
+        <a href="/simple">
             <input type="button" class="button" value="Découvrir la méthode d'Accompagnement">
         </a>
     </form>
