--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/simple-demo">
+            <NavLink class="nav-link" href="/simple">
                 <span class="oi oi-task" aria-hidden="true"></span> Accompagnement
             </NavLink>
         </div>
