--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -6,7 +6,6 @@
 <PageTitle>SIMPLE</PageTitle>
 
 <h1>Methode SIMPLE</h1>
-
 <p class="sh1">Présentation</p>
 
 <img class="img" src="Images/metro.png" alt="--">
@@ -14,15 +13,6 @@
 <h2>Objectif</h2>
 <span class="oi oi-target" aria-hidden="true"></span>
 <p>Amener le niveau de sécurité d'un projet à maturité en 40 jours ouvrés</p>
-
-
-<div class="bgDiv">  
-    <h2>Référentiels</h2>
-    <span class="oi oi-compass" aria-hidden="true"></span><br />
-    <a href="(https://www.ssi.gouv.fr/uploads/2018/11/guide-securite-numerique-agile-anssi-pa-v1.pdf">ANSSI: Sécurité & Agilité numériques</a><br />
-    <a href="(https://owasp.org/www-project-application-security-verification-standard/">OWASP: Application Security Vérification Standard</a><br />
-    <a href="(https://social.technet.microsoft.com/wiki/contents/articles/51078.comprendre-le-modele-stride-fr-fr.aspx">Microsoft: STRIDE</a><br />
-</div>
 
 <h2>Périmètre</h2>
 <span class="oi oi-crop" aria-hidden="true"></span>
@@ -33,17 +23,37 @@
     <li>les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
 </ul>
 
-
 @if (GetEtapes == null)
 {
         <p><em>Chargement...</em></p>
 }
 else
 {
+
+    <div class="bgDiv">  
+    <h2>Référentiels</h2>
+    <span class="oi oi-compass" aria-hidden="true"></span><br />
+    @foreach(SEtape E in GetEtapes){
+        @foreach(Atelier A in E.Ateliers){
+            TotalPoids += A.Poids;
+            @foreach(Processus P in A.Processus)
+            {
+                @if(P.Referentiel != null){
+                    <a href="@P.Referentiel.Uri">@P.Referentiel.Nom</a><br />
+                }
+            }
+        }
+    }
+    </div>
+
+
     <h2>Étapes</h2>
     <div class="bgDiv">
         <ul>
-        @foreach( SEtape E in GetEtapes){<li>@E.Etape</li>}
+        @foreach( SEtape E in GetEtapes)
+        {
+            <li><b>@E.Etape.FirstOrDefault()</b> :  @E.Etape</li>
+        }
         </ul>
     </div>
 
@@ -53,6 +63,7 @@ else
             <thead>
                 <tr>
                     <th>Atelier</th>
+                    <th>Déscription</th>
                     <th>Poids</th>
                 </tr>
             </thead>
@@ -62,16 +73,14 @@ else
                     {
                         <tr>
                             <td>@A.Nom</td>
+                            <td>@A.Description</td>
                             <td>@A.Poids</td>
                         </tr>
                     }
             </tbody>
         </table>
     </div>
-
-
     <a>Soit un poids total de @TotalPoids jours</a>
-
 }
 
     <form>
@@ -87,16 +96,11 @@ else
     </div>
 
 @code{
-
     private SEtape[]? GetEtapes;
     private int TotalPoids = 0;
 
     protected override async Task OnInitializedAsync()
     {
-
         GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
-        @foreach(SEtape E in GetEtapes)
-            @foreach(Atelier A in E.Ateliers)
-                TotalPoids += A.Poids;
     }
 }
