--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -6,7 +6,9 @@
 <PageTitle>SIMPLE</PageTitle>
     <h1>Démonstration</h1>
     <p><i>les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et les fonctionnalités qui lui seront prochainement associées</i></p>
-
+    <h3>Licence</h3>
+    <span class="oi oi-badge" aria-hidden="true"></span>
+    <a>GPL-3.0 license</a>
 
 @if (GetEtapes == null)
 {
@@ -23,28 +25,56 @@ else
         @foreach( Atelier A in E.Ateliers)
         {
             <div class="bgDiv">
-                <h3>@A.Nom</h3>
+                <h3><b>@A.Nom</b><br>@A.Description</h3>
                 <span class="oi oi-clipboard" aria-hidden="true"></span><br />
-                @if(@A.Prerequis != null){<a>Prérequis : @A.Prerequis</a> <br/>}
-                <a>Poids : @A.Poids</a>
+
+                <lu>
+                    <li>Poids : @A.Poids</li>
+                    @if(@A.Prerequis != null)
+                    {
+                        <li>Prérequis : @A.Prerequis</li>
+                    }
+
+                    @if(@A.Interlocuteurs != null)
+                    {
+                        string Tous = string.Empty;
+                        bool first = true;
+                        @foreach( string I in A.Interlocuteurs){
+                            @if(first){
+                                Tous += I;
+                                first = false;
+                            }else{
+                                Tous += ", "+I;
+                            }                                
+                        }
+                        <li>Interlocuteurs: @Tous</li>
+                    }
+                </lu>
 
                 <fieldset>
                     <legend>Processus:</legend>
-                    @foreach(Processus P in A.Processus){
-                        <input class="CheckBox" type="checkbox" @bind=@P.Fin name=@P.Nom value=@P.Nom/><br/>   
-                        <label for=@P.Nom>@P.Nom</label><br/>
-                }
+                    @foreach(Processus P in A.Processus)
+                    {
+                        <input class="CheckBox" type="checkbox" @bind=@P.Fin name=@P.Nom value=@P.Nom/>   
+                        <label for=@P.Nom>@P.Nom
+                            @if(@P.Referentiel != null)
+                            {
+                                <i> (Referentiel: @P.Referentiel.Nom)</i>
+                            }
+                        </label><br/>
+                    }
                 </fieldset>
 
                 <fieldset>
                     <legend>Livrables:</legend>
-                @foreach(Livrables L in A.Livrables){
-                    <p>@L.Nom</p>
-                    <form>
-                        <textarea @bind=@L.CR></textarea>
-                    </form>
-                }
-                <button class="button" @onclick="Save">Sauvegarder l'atelier</button>
+                    @foreach(Livrables L in A.Livrables)
+                    {
+                        <p>@L.Nom</p>
+                        <form>
+                            <textarea @bind=@L.CR></textarea>
+                        </form>
+                    }
+                    <button class="button" @onclick="Save">Sauvegarder l'atelier</button>
                 </fieldset>
                 
             </div>
@@ -52,25 +82,25 @@ else
     }
 
 }
-<h3>Licence</h3>
-<span class="oi oi-badge" aria-hidden="true"></span>
-    <div class="bgDiv">
-        <a>GPL-3.0 license</a>
-    </div>
 
 @code{
-
     private SEtape[]? GetEtapes;
-    private int TotalPoids = 0;
-
     protected override async Task OnInitializedAsync()
     {
         try
         {
             GetEtapes = await localStorage.GetItemAsync<SEtape[]>("SIMPLE");
-            @foreach(SEtape E in GetEtapes) // exception ici
-               @foreach(Atelier A in E.Ateliers) // exception ici
-                   TotalPoids += A.Poids;
+            @foreach(SEtape E in GetEtapes)
+            {
+                @foreach(Atelier A in E.Ateliers)
+                {
+                    Console.WriteLine("Atelier: {0}\nPoids: {1}", A.Nom, A.Poids.ToString());
+                    @foreach (Processus P in A.Processus)
+                    {
+                        Console.WriteLine("Processu: {0}\nFin:{1}", P.Nom, P.Fin);
+                    }
+                }                
+            }
         }
         catch
         {
