--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -6,9 +6,6 @@
 <PageTitle>SIMPLE</PageTitle>
     <h1>Démonstration</h1>
     <p><i>les sections suivantes sont en cours de développement. Elles présentent le détail de la méthode et les fonctionnalités qui lui seront prochainement associées</i></p>
-    <h3>Licence</h3>
-    <span class="oi oi-badge" aria-hidden="true"></span>
-    <a>GPL-3.0 license</a>
 
 @if (GetEtapes == null)
 {
@@ -82,6 +79,21 @@ else
     }
 
 }
+
+<h3>Vous utilisez la Methode SIMPLE ?</h3>
+<span class="oi oi-heart" aria-hidden="true"></span>
+<div class="bgDiv">
+    <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun puisse l'utiliser. 
+        Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas à faire un don sur ce wallet </a>
+    <a href="https://etherscan.io/address/0xcC424e30Ff6eEAb4E6B3A900c5446038F858b314">Ethereum</a>
+</div>
+
+<h3>Licence</h3>
+<span class="oi oi-badge" aria-hidden="true"></span>
+<div>
+    <a>GPL-3.0 license</a>
+</div>
+
 
 @code{
     private SEtape[]? GetEtapes;
