--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -6,22 +6,19 @@
 <PageTitle>SIMPLE</PageTitle>
 
 <h1>Methode SIMPLE</h1>
-<p class="sh1">Présentation</p>
+<p class="sh1">L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet en moins de 2 mois</p>
 
-<img class="img" src="Images/metro.png" alt="--">
-
-<h2>Objectif</h2>
-<span class="oi oi-target" aria-hidden="true"></span>
-<p>Amener le niveau de sécurité d'un projet à maturité en 40 jours ouvrés</p>
 
 <h2>Périmètre</h2>
 <span class="oi oi-crop" aria-hidden="true"></span>
-<p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils reposent, ce qui inclut:</p>
-<ul>
-    <li>toute application métier, qu'il s'agisse d'un environnement  Web, industriel, IoT, cloud, hybride, etc.</li>
-    <li>le middleware, les librairies, les dépendances et les composants tiers</li>
-    <li>les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
-</ul>
+<div class="bgDiv"> 
+    <p>Le champ de cette méthodologie cible les projets applicatifs ainsi que l'infrastructure sur laquelle ils reposent, ce qui inclut:</p>
+    <ul>
+        <li>toute application métier, qu'il s'agisse d'un environnement  Web, industriel, IoT, cloud, hybride, etc.</li>
+        <li>le middleware, les librairies, les dépendances et les composants tiers</li>
+        <li>les composants du système d’exploitation, des microservices, ainsi que leur orchestration</li>
+    </ul>
+</div>
 
 @if (GetEtapes == null)
 {
@@ -30,9 +27,10 @@
 else
 {
 
-    <div class="bgDiv">  
+     
     <h2>Référentiels</h2>
     <span class="oi oi-compass" aria-hidden="true"></span><br />
+    <div class="bgDiv"> 
     @foreach(SEtape E in GetEtapes){
         @foreach(Atelier A in E.Ateliers){
             TotalPoids += A.Poids;
@@ -48,6 +46,7 @@ else
 
 
     <h2>Étapes</h2>
+    <span class="oi oi-key" aria-hidden="true"></span>
     <div class="bgDiv">
         <ul>
         @foreach( SEtape E in GetEtapes)
@@ -58,6 +57,7 @@ else
     </div>
 
     <h2>Ateliers</h2>
+    <span class="oi oi-layers" aria-hidden="true"></span>
     <div class="bgDiv">
         <table class="table">
             <thead>
@@ -83,22 +83,30 @@ else
     <a>Soit un poids total de @TotalPoids jours</a>
 }
 
-    <form>
-        <a href="/simple-demo">
-            <input type="button" class="button" value="Démarrer un accompagnement">
-        </a>
-    </form>
+<form>
+    <a href="/simple-demo">
+        <input type="button" class="button" value="Démarrer un accompagnement">
+    </a>
+</form>
+
+<h3>Vous utilisez la Methode SIMPLE ?</h3>
+<span class="oi oi-heart" aria-hidden="true"></span>
+<div class="bgDiv">
+    <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun puisse l'utiliser. 
+        Si vous appréciez la plus-value qu'apporte cette méthode au quotidien, n'hésitez pas à faire un don sur ce wallet </a>
+    <a href="https://etherscan.io/address/0xcC424e30Ff6eEAb4E6B3A900c5446038F858b314">Ethereum</a>
+</div>
 
 <h3>Licence</h3>
 <span class="oi oi-badge" aria-hidden="true"></span>
-    <div class="bgDiv">
-        <a>GPL-3.0 license</a>
-    </div>
+<div>
+    <a>GPL-3.0 license</a>
+</div>
+
 
 @code{
     private SEtape[]? GetEtapes;
     private int TotalPoids = 0;
-
     protected override async Task OnInitializedAsync()
     {
         GetEtapes = await Http.GetFromJsonAsync<SEtape[]>("/Data/SIMPLE.json");
