--- a/Pages/Simple-demo.razor
+++ b/Pages/Simple-demo.razor
@@ -80,7 +80,7 @@ else
 
 }
 
-<h3>Vous utilisez la Methode SIMPLE ?</h3>
+<h3>Vous utilisez la méthode SIMPLE ?</h3>
 <span class="oi oi-heart" aria-hidden="true"></span>
 <div class="bgDiv">
     <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun puisse l'utiliser. 
