--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -110,7 +110,7 @@
     <span class="oi oi-globe" aria-hidden="true"></span>
     <div>
         <a>Taisen-Solutions - Conseil en systèmes et logiciels informatiques - 91462472100017</a><br />
-        <a>Ce site est hébergée par la société OVH dont l'adresse est 2 rue Kellermann - 59100 Roubaix - France</a>
+        <a>Ce site est hébergée par la société OVH dont l'adresse est 2 rue Kellermann - 59100 Roubaix - France</a><br />
         <a>Le code s'exécute dans votre navigateur grâce à la technologie WebAssembly, les sources sont consultables </a><a href="https://github.com/Aif4thah/SIMPLE-Taisen">ici</a>
     </div>
 </div>
