--- a/Pages/Simple.razor
+++ b/Pages/Simple.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>SIMPLE</PageTitle>
 
-<h1>Methode SIMPLE</h1>
+<h1>Méthode SIMPLE</h1>
 <p class="sh1">L'objectif de cette méthode est de faire progresser significativement le niveau de sécurité d'un projet en moins de 2 mois</p>
 
 
@@ -89,7 +89,7 @@ else
     </a>
 </form>
 
-<h3>Vous utilisez la Methode SIMPLE ?</h3>
+<h3>Vous utilisez la méthode SIMPLE ?</h3>
 <span class="oi oi-heart" aria-hidden="true"></span>
 <div class="bgDiv">
     <a>Le temps nécessaire pour le développement et l'amélioration continue de la méthode SIMPLE est pris sur mon temps libre. J'ai tenu à ce que ce projet soit gratuit et open-source, pour que chacun puisse l'utiliser. 
