--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -7,19 +7,19 @@
 <p class="sh1"> La sécurité en cohérence avec vos projets</p>
 
 <div class= "bgBan">
-    <img src="Images/Logov2.png" class="imgBan" alt="--">
+    <img src="Images/Logov2.png" class="imgBan" alt="Conseil en systèmes et logiciels informatiques">
 </div>
 
 
 <div class="bgDiv">
     <br>
     <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
-    <img src="Images/Ok.png" class="imgLogo" alt="--">
+    <img src="Images/Ok.png" class="imgLogo" alt="accompagnement">
     <p>
         Taisen a pour objectif de sécuriser vos projets de manière adaptée et cohérente.
         Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux applications, 
         Taisen propose une méthode à la fois réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI. <br>
-        Si vous avez déjà eu le sentiment que vos tests d'intrusions, contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
+        Si vous avez déjà eu le sentiment que, malgré vos efforts, vos contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
         vous êtes au bon endroit.
         <br>
     </p>
@@ -28,7 +28,7 @@
 <div>
     <br>
     <h2>Une méthode différente, en phase avec les bonnes pratiques </h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="--">
+    <img src="Images/Ok.png"class="imgLogo" alt="bonnes pratiques">
     <p> 
         L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
         Taisen souhaite apporter aux projets des solutions bas niveau leur permettant de maitriser leur niveau de sécurité. 
@@ -49,7 +49,7 @@
 <div>
     <br>
     <h2>Un panel d'audits de sécurité adapté à vos besoins</h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="--">
+    <img src="Images/Ok.png"class="imgLogo" alt="audits de sécurité">
     <p> 
         Afin d'évaluer le niveau de sécurité de votre système d'information, Taisen propose plusieurs types d'audits de sécurité.
         Un effort tout particulier est porté sur les recommandations liées aux vulnérabilités découvertes. 
@@ -67,7 +67,7 @@
 <div class="bgDiv">
     <br>
     <h2> Une recherche d'amélioration constante </h2>
-    <img src="Images/Ok.png"class="imgLogo" alt="--">
+    <img src="Images/Ok.png"class="imgLogo" alt="méthode SIMPLE">
     <p>
         Grâce à un temps dédié au retour d'expérience, à la prise de recul et au développement d'outillage et de processus efficients,
         Taisen à l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
@@ -85,7 +85,7 @@
     <br>
     <h2>Contact</h2>
 
-    <img src="Images/Portrait.png" class="imgSmall" alt="--">
+    <img src="Images/Portrait.png" class="imgSmall" alt="Contact">
 
 
     <p class="sh1"> Pour une première prise de contact, exprimer un besoin ou simplement échanger</p>
