--- a/Pages/CShidori-demo.razor
+++ b/Pages/CShidori-demo.razor
@@ -1,5 +1,4 @@
 ﻿@page "/CShidori-demo"
-@inject IJSRuntime JS
 @using TAISEN.Classes;
 @using CShidori.Core;
 
@@ -7,38 +6,41 @@
 <PageTitle>CShidori</PageTitle>
 
 
-
-<EditForm Model="@CSo" OnValidSubmit="@DownloadBinary">
+<EditForm Model="@CSo" OnValidSubmit="@GenerateOut">
     <DataAnnotationsValidator />
     <ValidationSummary />
-
-    <InputText id="name" @bind-Value="CSo.Name" />
-    <InputText id="input" @bind-Value="CSo.Input" />
+    <p>
+        <label>Nom du point d'entrée
+        <InputText id="name" @bind-Value="CSo.Name" />
+        </label>
+    </p>
+    <p>
+        <label>Saisie attendue
+        <InputText id="input" @bind-Value="CSo.Input" />
+        </label>
+    </p>
 
     <button type="submit">Submit</button>
 </EditForm>
 
+<fieldset>
+     <legend>Jeux de test:</legend>
+        <form>
+            <textarea @bind=@JeuxDeTest></textarea>
+        </form>
+</fieldset>
+
 @code {
 
+    string JeuxDeTest = string.Empty;
     private CShidObj CSo = new();
 
     //https://docs.microsoft.com/en-us/aspnet/core/blazor/forms-and-input-components?view=aspnetcore-6.0
 
-    
-    async Task DownloadBinary()
+    private void GenerateOut()
     {
-        // Generate a file
-        byte[] file = Enumerable.Range(0, 100).Cast<byte>().ToArray();
-
-        // Send the data to JS to actually download the file
-        await JS.InvokeVoidAsync("BlazorDownloadFile", "file.bin", "application/octet-stream", file);
+         new MutDispatcher(CSo.Input.Length, CSo.Input).Output.ForEach(x => JeuxDeTest+= x + "\n");
     }
 
-    async Task DownloadText()
-    {
-        // Generate a text file
-        byte[] file = System.Text.Encoding.UTF8.GetBytes("Hello world!");
-        await JS.InvokeVoidAsync("BlazorDownloadFile", "file.txt", "text/plain", file);
-    }
 
 }
